--- a/plausible-conf.env
+++ b/plausible-conf.env
@@ -1,5 +1,5 @@
-ADMIN_USER_EMAIL=replace-me
-ADMIN_USER_NAME=replace-me
-ADMIN_USER_PWD=replace-me
-BASE_URL=replace-me
-SECRET_KEY_BASE=replace-me
+ADMIN_USER_EMAIL=%ADMIN_USER_EMAIL
+ADMIN_USER_NAME=%ADMIN_USER_NAME
+ADMIN_USER_PWD=%ADMIN_USER_PWD
+BASE_URL=https://%HOST
+SECRET_KEY_BASE=%SECRET_KEY_BASE
