--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,7 +35,13 @@ services:
       - ADMIN_USER_NAME
       - ADMIN_USER_PWD
       - BASE_URL=https://${HOST}
-      - SECRET_KEY_BASE
+      - SECRET_KEY_BASE 
+      - MAILER_EMAIL 
+      - SMTP_HOST_ADDR 
+      - SMTP_HOST_PORT 
+      - SMTP_USER_NAME 
+      - SMTP_USER_PWD  
+      - SMTP_HOST_SSL_ENABLED=true
 
 volumes:
   db-data:
